--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ag-grid-react": "^26.0.0",
     "react": "^17.0.2",
     "react-csv": "^2.0.3",
+    "react-csv-reader": "^3.4.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "recoil": "^0.4.1",
